# llm

./: .gitignore  README.md  pyproject.toml
apps/: ddp_train.py  fsdp_train.py  train.py
perf/: prepare_train_dataset.prof  prepare_train_dataset_profile.txt
src/: __init__.py  dataset.py  generate.py  prepare_data.py  prepare_data_workers.py  tokenizer.py  train.py  train_tokenizer.py
src/distributed/: __init__.py  data_parallel.py  distributed_data_parallel.py  fully_sharded_data_parallel.py  zero1.py  zero_redundancy_optimizer.py
src/distributed/pipelining/: schedules.py  stage.py
src/distributed/tensor_parallel/: __init__.py  layers.py  mappings.py  parallel_attention.py  parallel_linear.py  parallel_swiglu.py  parallel_tensor_ops.py
src/layers/: __init__.py  activation.py  attention.py  dropout.py  moe.py  norm.py  positional_embedding.py
src/models/: config.py  gpt.py  llama.py  parallel_llama.py
tests/: attention_test.py  dropout_test.py  embedding_test.py  norm_test.py  tokenizer_test.py
