[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Implementing Large Language Models from scratch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
